# flowcore

./: .dockerignore  Dockerfile  Makefile  README.md  catalog-info.yaml  pyproject.toml
.github/workflows/: docker-publish.yml
docker/: docker-compose.yml
docker/navapi/: Dockerfile  Makefile
docker/worker/: Dockerfile  Makefile
docs/: index.md  mkdocs.yaml
src/: Dockerfile  Makefile
