[project]
name = "flowcore"
version = "0.1.0"
description = "Flowcore  Project for navigator apps"
authors = [
    {name = "Jesus Lara", email = "jlara@trocglobal.com"}
]
readme = "README.md"
requires-python = ">=3.10.1"

dependencies = [
    # Specific requirements
    "transitions==0.9.2",

    # Azure integration
    "azure-teambots",

    # Core dependencies
    "querysource>=3.17.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "black",
    "pylint",
    "mypy"
]

production = [
    "gunicorn",
    "uvicorn",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# uv-specific configuration
[tool.uv]
package = false
override-dependencies = ["emoji==1.7.0", "msal==1.32.0", "jsonpickle==3.0.2"]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio",
    "black",
    "pylint"
]
