[project]
name = "flowcore"
version = "2.0.0"
description = "Navigator flowcore, image base for deploy apps."
authors = [
    {name = "Jesus Lara", email = "jlara@trocglobal.com"}
]
readme = "README.md"
requires-python = ">=3.10.1"

dependencies = [
    # Specific requirements
    "transitions==0.9.2",
    # Azure integration
    "azure-teambots",
    # Flowtask + QuerySource and AI Parrot
    "querysource"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "black",
    "pylint",
    "mypy"
]

production = [
    "gunicorn",
    "uvicorn",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# uv-specific configuration
[tool.uv]
package = false
override-dependencies = ["emoji==1.7.0", "msal==1.32.0", "jsonpickle==3.0.2"]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio",
    "black",
    "pylint"
]

[tool.uv.sources]
# For usage in development, uncomment the following lines to use local paths for your libraries:
# querysource = { path = "../querysource", editable = true }
# flowtask = { path = "../flowtask", editable = true }
# ai-parrot = { path = "../ai-parrot", editable = true }